--- a/occudopt/templates/add.html
+++ b/occudopt/templates/add.html
@@ -1,11 +1,17 @@
 <!doctype html>
 	
 <form method="POST" action="" enctype=multipart/form-data>
-{{ form.email.label }} {{ form.email(size=20) }}</br>
-{{ form.first_name.label }} {{ form.first_name(size=20) }}</br>
-{{ form.last_name.label }} {{ form.last_name(size=40) }}</br>
-{{ form.password.label }} {{ form.password(size=40) }}</br>
-{{ form.philosophy.label}} {{form.philosophy(size=100) }}</br>
+{{ form.email.label }} {{ form.email(size=20) }}<br/>
+{{ form.first_name.label }} {{ form.first_name(size=20) }}<br/>
+{{ form.last_name.label }} {{ form.last_name(size=40) }}<br/>
+{{ form.password.label }} {{ form.password(size=40) }}<br/>
+{{ form.philosophy.label}} {{ form.philosophy(size=100) }}<br/>
+primary city of occupation: <select name="city">
+{% for city in cities %}
+<option value="{{city.name}}">{{city.name}}</option>
+{% endfor %}
+</select><br/>
+Tags that describe you and your interests (separate with ',' commas): <input type="text" name="tags" size=100 /><br/>
 A photo of you:<input type=file name=photo>
 <input type="submit" value="Post">
 </form>
