--- a/occudopt/templates/user_profile.html
+++ b/occudopt/templates/user_profile.html
@@ -1,4 +1,4 @@
 <!doctype html>
-<body>
-<H1>{{ user.firt_name }} {{user.second_name}}
-</body>
+
+<H1>{{ user.firt_name }} {{user.second_name}}</H1>
+{{user.email}}
